task: fixed ipad spacing

--- a/src/apps/active-preview/components/Frame/Frame.less
+++ b/src/apps/active-preview/components/Frame/Frame.less
@@ -37,7 +37,7 @@
     &.ipad {
       width: 1367px;
       height: 1027px;
-      margin-left: -173px;
+      margin-left: -170px;
       margin-top: 170px;
     }
 
